--- a/style.css
+++ b/style.css
@@ -119,26 +119,20 @@ a {
 } */
 .wrapper{
     width: 100%;
-    position: relative;
+    /* position: relative; */
+    position: fixed;
+    z-index: 10;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 8rem;
-    /* transform: scale(0); */
+    padding: 8rem;
     display: none;
+    background-color: rgba( 0, 0, 0, 0.4 );
 }
 .active-popup {
-    /* transform: scale(1); */
-    opacity: 1;
-    visibility: visible;
+    display: flex;
+    z-index: 99;
 }
-/* .wrapper .active .form-box .login {
-    transition: none;
-    transform: translateX(-400px);
-} */
-/* .wrapper.active {
-    height: 520px;
-} */
 .form-box {
     position: relative;
     display: flex;
@@ -220,12 +214,17 @@ a {
     line-height: 60px;
     z-index: 99;
 }
-.bi-eye {
+.icon .bi {
     cursor: pointer;
 }
-.icon-active {
-    display: none;
+.icon-before {
     cursor: pointer;
+}
+.icon-after {
+    display: block;
+}
+.eye-icon-disabled {
+    display: none;
 }
 .remember-forgot {
     font-size: .9em;
