--- a/information/information.css
+++ b/information/information.css
@@ -30,6 +30,8 @@ a {
     --bgColor: #F5F9FF;
     --textColorLight: #A7AABD;
     --textColorYellow: #B68A00;
+
+    --textBlackLight : #474449;
     
     --boxColor : #fafbfc;
 
@@ -44,8 +46,8 @@ a {
     position: fixed;
     display: flex;
     width: 100%;
-    background-color: transparent;
-    /* background-color: var(--bgColor); */
+    /* background-color: transparent; */
+    background-color: var(--bgColor);
     align-items: center;
     padding: 8px 30px;
     z-index: 99;
@@ -130,7 +132,7 @@ a {
     justify-content: center;
     align-items: center;
     /* background-color: var(--bgColor); */
-    gap: 18rem;
+    gap: 10rem;
 }
 .left-info-section {
     display: flex;
@@ -167,6 +169,7 @@ a {
     border: 1px solid var(--textColor);
     border-radius: 20px;
     padding: 4px 10px;
+    font-size: 12px;
 }
 .tag-info:hover {
     background: #f5f9ffab;
@@ -177,18 +180,77 @@ a {
     border: 1px solid rgba(255, 255, 255, 0.31);
 }
 .right-info-section {
+    display: flex;
+    flex-direction: column;
     background-color: var(--bgColor);
-    padding: 10rem 2rem;
-    background: #f5f9ffab;
+    padding: 2rem 1rem;
+    width: 70%;
+    /* background: var(--textColor); */
+    background-image: url(../images/cool-background\ \(2\).png);
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 0 8px 30px rgba(0, 0, 0, 0.8);
+    /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 0 8px 30px rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(7.5px);
     -webkit-backdrop-filter: blur(7.5px);
-    border: 1px solid rgba(255, 255, 255, 0.31);
+    border: 1px solid rgba(255, 255, 255, 0.31); */
+}
+.right-icon-section {
+    display: flex;
+    justify-content: center;
+}
+.right-icon {
+    width: 180px;
+}
+.right-title-info {
+    display: flex;
+    justify-content: center;
+}
+.right-title-info h4 {
+    font-size: 32px;
 }
 .right-date-info {
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
+    padding: 0 1rem;
+    margin-top: 2rem;
+}
+.right-date-info .date-info h6 {
+    font-weight: var(--bold-3);
+    color: var(--textBlackLight);
+    font-size: 12px;
+}
+.right-date-info .mid {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.right-date-info .mid .month {
+    font-size: 14px;
+    font-weight: var(--bold-3);
+}
+.right-date-info .mid h4 {
+    font-size: 52px;
+}
+.right-date-info .mid h6 {
+    font-size: 13px;
+}
+.right-date-info .date-info h5 {
+    font-weight: var(--bold-2);
+    color: var(--textColor);
+}
+.right-line-info {
+    justify-content: center;
+    display: flex;
+    padding: 0 1rem;
+    margin-top: 1rem;
+}
+.date-line {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: var(--textColor);
 }
 .flip-card {
     position: relative;
@@ -204,6 +266,7 @@ a {
     height: .75em;
     line-height: 1;
     padding: .25em;
+    font-size: 2rem;
     overflow: hidden;
 }
 .top,
@@ -249,19 +312,47 @@ a {
     display: flex;
     gap: .5em;
     justify-content: center;
+    margin-top: 2rem;
+    /* padding: 0 1rem; */
 }
 .container-segment {
     display: flex;
-    flex-direction: column;
-    gap: .1em;
+    flex-direction: column-reverse;
+    /* gap: .1em; */
     align-items: center;
+    width: 100%;
 }
 .segment {
     display: flex;
-    gap: .1em;
+    /* gap: .1em; */
 }
 .segment-title {
-    font-size: 1rem;
+    margin-top: 2px;
+    font-size: 12px;
+    font-weight: var(--bold-3);
+    color: #fbfbfbd0;
+}
+.validation-btn-section {
+    display: flex;
+    justify-content: center;
+    padding: 0 1rem;
+    margin-top: 2rem;
+}
+.validation-btn {
+    width: 100%;
+    border: 2px solid #42465664;
+    border-radius: 8px;
+    padding: 6px 16px;
+    font-weight: 500;
+    cursor: pointer;
+    /* background-color: var(--bgColor); */
+    background-color: transparent;
+    font-size: 18px;
+}
+.validation-btn:hover {
+    background-color: var(--textColor);
+    color: var(--bgColor);
+    transition: all .4s ease;
 }
     
 .competition-branch-page {
@@ -535,6 +626,9 @@ a {
     font-size: 14px;
     color: var(--bgColor);
 }
+.icon-title:hover {
+    color: var(--textColorLight);
+}
 .footer-mid-section-responsive {
     display: none;
 }
@@ -549,6 +643,9 @@ a {
     font-weight: 400;
     color: var(--textColorLight);
     font-size: 16px;
+}
+.design-name:hover {
+    color: var(--textColorYellow);
 }
 .footer-line-section {
     /* display: flex; */
