--- a/style.css
+++ b/style.css
@@ -96,8 +96,6 @@ a {
     padding: 6px 16px;
     font-weight: 500;
     cursor: pointer;
-}
-.login-btn {
     background-color: transparent;
 }
 .login-btn:hover {
@@ -137,8 +135,8 @@ a {
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 400px;
-    height: 400px;
+    width: 420px;
+    height: 450px;
     justify-content: center;
     align-items: center;
     /* width: 100%; */
@@ -290,7 +288,8 @@ a {
     padding: 10rem 0;
 
     
-    background-image: url(./images/cat-air-biru.jpg);
+    /* background-image: url(./images/cat-air-biru.jpg); */
+    background-image: url(./images/1.svg);
     /* background-image: url(./images/cool-background\ \(2\).png); */
     background-repeat: no-repeat;
     background-size: cover;
@@ -395,7 +394,10 @@ a {
     width: 100%;
     justify-content: center;
     /* text-align: center; */
-    background-color: var(--themeColor);
+    /* background-color: var(--themeColor); */
+    background-image: url(./images/2.svg);
+    /* background-size: cover; */
+    background-repeat: no-repeat;
     /* margin-top: -180px; */
     padding-bottom: 2rem;
     padding-top: 4rem;
@@ -457,158 +459,6 @@ a {
     background-color: var(--themeColor);
 }
 
-.gallery-page {
-    width: 100%;
-    padding: 0 3rem;
-    justify-content: center;
-    /* text-align: center; */
-    background-color: var(--bgColor);
-    margin-top: -100px;
-    padding-bottom: 5rem;
-}
-.gallery-title-section {
-    margin-bottom: 1rem;
-}
-.gallery-title {
-    font-size: 38px;
-    display: flex;
-    justify-content: center;
-}
-.gallery-line-section {
-    display: flex;
-    justify-content: center;
-}
-.line-gallery {
-    margin-top: 6px;
-    content: "";
-    background-color: #424656;
-    width: 12%;
-    height: 2px;
-}
-/* .container-carousel {
-    background-color: #2E765E;
-    padding: 100px 0 0 0;
-} */
-.carousel-title-container {
-    display: flex;
-    justify-content: center;
-}
-.carousel-title {
-    font-size: 20px;
-    font-weight: var(--bold-2);
-    margin-bottom: 4rem;
-    text-align: center;
-}
-.content-slide {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
-}
-.imgslide {
-    display: none;
-}
-.imgslide img {
-    vertical-align: middle;
-    width: 100%;
-    height: 100%;
-    border-radius: 15px;
-    box-shadow: 0 0 10px 1px var(--textColor);
-}
-/* .prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    top: 40%;
-    width: auto;
-    padding: 16px;
-    color: rgb(255, 254, 224);
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    background-color: rgba(0, 0, 0, 0.8); 
-}
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-.pre:hover,
-.next:hover {
-    background-color: rgba(255, 255, 255, 0.8);
-    color: rgb(0, 0, 0);
-} */
-/* .text {
-    color: #fafafa;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-} */
-.content-slide .numberslide {
-    color: #ffffff;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-/* resposive */
-@media screen and (max-width: 800px) {
-
-    .content-slide {
-        padding: 8px 50px 12px 50px;
-    }
-
-    .next {
-        right: 50px;
-        border-radius: 3px 0 0 3px;
-    }
-    
-}
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-@-webkit-keyframes fade {
-    from {
-        opacity: .4;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-@keyframes fade {
-    from {
-        opacity: .4;
-    }    
-    to {
-        opacity: 1;
-    }
-}
-.container .page {
-    text-align: center;
-    padding-top: 20px;
-}
-.page .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-    border-radius: 50%;
-}
-.page .active,
-.page .dot:hover {
-    background-color: var(--textColor);
-}
 
 .more-info-section {
     position: relative;
@@ -691,6 +541,7 @@ a {
 .iframe-smanta {
     border-radius: 0 10px 10px 0;
     height: 500px;
+    /* min-width: 80%; */
 }
 .sub-information-section {
     display: flex;
@@ -1075,22 +926,26 @@ a {
     .regist-subtitle {
         font-size: 20px;
     }
+    .information-page {
+        width: 100%;
+        padding: 10rem 3rem;
+    }
+    .information-wrapper {
+        width: 100%;
+        height: 500px;
+    }
+    .iframe-smanta {
+        max-width: 200%;
+    }
     .sub-information-section {
-        gap: 2rem;
-        margin-top: 8rem;
+        padding: 0 2rem;
     }
-    .bi-geo-alt-fill,
-    .bi-clock-fill,
-    .bi-telephone-fill,
-    .location-title,
-    .open-title,
-    .contact-title {
-        font-size: 22px;
-    }
-    .location-text,
-    .open-text,
-    .contact-text {
-        font-size: 12px;
+    .media-section {
+        display: flex;
+        justify-content: flex-start;
+        gap: 12px;
+        align-items: center;
+        margin-top: 2rem;
     }
     .footer-icon > a {
         font-size: 20px;
@@ -1156,35 +1011,35 @@ a {
     .regist-subtitle {
         font-size: 14px;
     }
-    .carousel-title {
-        font-size: 14px;
-        margin-bottom: 4rem;
+    .information-page {
+        width: 100%;
+        padding: 10rem 3rem;
     }
-    .page .dot {
-        height: 12px;
-        width: 12px;
+    .information-wrapper {
+        display: flex;
+        flex-direction: column-reverse;
+        border-radius: 10px;
+        max-width: 100%;
+        height: 750px;
     }
-    .sub-information-section {
-        gap: 2rem;
-        margin-top: 8rem;
+    .map-section {
+        display: flex;
+        justify-content: center;
+        border-radius: 10px;
     }
     .iframe-smanta {
-        width: 500px;
-        height: 400px;
-        padding: 2rem;
+        border-radius: 0 10px 10px 0;
+        height: 300px;
+        max-width: 92%;
     }
-    .bi-geo-alt-fill,
-    .bi-clock-fill,
-    .bi-telephone-fill,
-    .location-title,
-    .open-title,
-    .contact-title {
-        font-size: 18px;
-    }
-    .location-text,
-    .open-text,
-    .contact-text {
-        font-size: 10px;
+    .sub-information-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        margin: 3rem 0;
+        padding: 0 2rem;
+        /* background-color: #bbb; */
     }
     .footer-page {
         padding-bottom: 0;
@@ -1303,45 +1158,37 @@ a {
     .regist-subtitle {
         font-size: 10px;
     }
-    .carousel-title {
-        font-size: 12px;
-        margin-bottom: 4rem;
+    .information-page {
+        width: 100%;
+        padding: 10rem 3rem;
     }
-    .page .dot {
-        height: 10px;
-        width: 10px;
-    }
-    .imgslide img {
+    .information-wrapper {
+        display: flex;
+        flex-direction: column-reverse;
         border-radius: 10px;
-        box-shadow: 0 0 6px 0.2px var(--textColor);
+        max-width: 100%;
+        /* height: 530px; */
+        height: 100%;
     }
-    .sub-information-section {
-        gap: 1rem;
-        margin-top: 4rem;
-        flex-direction: column;
-        text-align: center;
-    }
-    .information-icon {
-        display: block;
-        gap: 8px;
+    .map-section {
+        display: flex;
+        justify-content: center;
+        border-radius: 10px;
     }
     .iframe-smanta {
-        width: 400px;
-        height: 300px;
-        padding: 1rem;
+        border-radius: 10px;
+        height: 250px;
+        max-width: 90%;
+        margin-top: 1rem;
     }
-    .bi-geo-alt-fill,
-    .bi-clock-fill,
-    .bi-telephone-fill,
-    .location-title,
-    .open-title,
-    .contact-title {
-        font-size: 20px;
-    }
-    .location-text,
-    .open-text,
-    .contact-text {
-        font-size: 14px;
+    .sub-information-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        margin: 3rem 0;
+        padding: 0 1rem;
+        /* background-color: #bbb; */
     }
     .footer-icon > a {
         font-size: 16px;
@@ -1368,7 +1215,7 @@ a {
         display: flex;
         flex-direction: column;
         width: 100%;
-        padding: 2rem 0;
+        padding: 6rem 0;
     }
     .home-main-title-section {
         padding-left: 20px;
@@ -1396,9 +1243,8 @@ a {
         margin-bottom: 2rem;
     }
     .about-page {
-        margin-top: 0px;
-        padding-top: 2rem;
-        padding: 0 1rem;
+        margin-top: -8px;
+        padding: 3rem 1rem;
     }
     .about-title,
     .registration-title,
@@ -1420,7 +1266,7 @@ a {
     }
     .registration-page {
         margin-top: -1rem;
-        padding: 0 1rem;
+        padding: 3rem 1rem;
     }
     .registration-title-section {
         margin-bottom: 0;
@@ -1435,55 +1281,35 @@ a {
     .regist-subtitle {
         font-size: 12px;
     }
-    .gallery-carousel img {
+    .information-page {
         width: 100%;
+        padding: 4rem 1rem;
     }
-    .imgslide img {
+    .information-wrapper {
+        display: flex;
+        flex-direction: column-reverse;
         border-radius: 10px;
-        box-shadow: 0 0 6px 0.2px var(--textColor);
+        max-width: 100%;
+        /* height: 530px; */
+        height: 100%;
     }
-    .carousel-title {
-        font-size: 10px;
-        margin-bottom: 2rem;
-    }
-    .container .page {
-        padding-top: 0px;
-    }
-    .page .dot {
-        height: 8px;
-        width: 8px;
-    }
-    .line-information {
-        margin-top: 8px;
-        width: 60%;
-    }
-    .sub-information-section {
-        gap: 1rem;
-        margin-top: 4rem;
-        flex-direction: column;
-        text-align: center;
-    }
-    .information-icon {
-        display: block;
-        gap: 8px;
+    .map-section {
+        display: flex;
+        justify-content: center;
+        border-radius: 10px;
     }
     .iframe-smanta {
+        border-radius: 10px;
+        height: 200px;
+        max-width: 90%;
+        margin-top: 1rem;
+    }
+    .sub-information-section {
+        margin: 1rem 0;
+        padding: 0 1rem;
+    }
+    .sub-information-section .title-information h6 {
         width: 90%;
-        height: 300px;
-        padding: 1rem;
-    }
-    .bi-geo-alt-fill,
-    .bi-clock-fill,
-    .bi-telephone-fill,
-    .location-title,
-    .open-title,
-    .contact-title {
-        font-size: 18px;
-    }
-    .location-text,
-    .open-text,
-    .contact-text {
-        font-size: 12px;
     }
     .faq-page {
         padding: 6rem 1rem;
