--- a/style.css
+++ b/style.css
@@ -38,6 +38,34 @@ a {
     --bold-4: 200;
 }
 
+/* Scroll top */
+.scroll-top{
+    position: fixed;
+    bottom: -100%;
+    right: 1.5rem;
+    z-index: 100;
+}
+.scroll-top .bx{
+    padding: 8px;
+    font-size: 1.3rem;
+    background:#f5f9ff75;
+    /* box-shadow: 0.3px 1px 1px rgba(0, 0, 0, 0.4); */
+    transition: 0.4s;
+    /* background: transparent; */
+    border-radius: 8px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(7.5px);
+}
+.scroll-top .bx:hover{
+    background:#f5f9ffa8;
+    transition: 0.3s;
+}
+.scroll-active{
+    bottom: 3.5rem;
+    transition: 0.3s;
+}
+
 .navbar-section {
     position: fixed;
     display: flex;
@@ -84,6 +112,12 @@ a {
     font-size: 14px;
     cursor: pointer;
     font-weight: 600;
+}
+.main-option-navbar-2 {
+    font-size: 14px;
+    cursor: pointer;
+    font-weight: 600;
+    margin-left: 8px;
 }
 .btnActive {
     display: none;
@@ -494,6 +528,44 @@ a {
     background-color: var(--themeColor);
 }
 
+.gallery-page {
+    padding: 10px;
+    max-width: 1100px;
+    margin: 8rem auto;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: 250px;
+    grid-auto-flow: dense;
+}
+.v-stretch {
+    grid-row: span 2;
+}
+.h-stretch {
+    grid-column: span 2;
+}
+.big-stretch {
+    grid-row: span 2;
+    grid-column: span 2;
+}
+.gallery-page div img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media (max-width: 560px) {
+    .v-stretch {
+        grid-row: span 1;
+    }
+    .h-stretch {
+        grid-column: span 1;
+    }
+    .big-stretch {
+        grid-column: span 1;
+        grid-row: span 1;
+    }
+}
 
 .more-info-section {
     position: relative;
@@ -981,7 +1053,8 @@ a {
     .logos-navbar {
         width: 45px;
     }
-    .main-option-navbar {
+    .main-option-navbar,
+    .main-option-navbar-2 {
         font-size: 12px;
     }
     .sign-btn {
@@ -1114,6 +1187,9 @@ a {
     }
 }
 @media screen and (max-width: 576px) {
+    .scroll-active{
+        bottom: 2rem;
+    }
     .main-title-navbar {
         font-size: 13px;
     }
@@ -1138,7 +1214,8 @@ a {
         padding: 100px 20px;
         transition: 0.5s all cubic-bezier(0.075, 0.82, 0.165, 1);
     }
-    .main-option-navbar {
+    .main-option-navbar,
+    .main-option-navbar-2 {
         font-size: 18px;
     }
     .btnActive {
